--- a/css/stylesa.css
+++ b/css/stylesa.css
@@ -15,6 +15,7 @@ body {
     background-color: #ffffff00;
     flex-direction: column;
     width: 100%;
+height: 100%;
 	position: absolute;
   animation: fadeInCurve 8s ease-in forwards;
   overflow: hidden;
@@ -37,11 +38,15 @@ body {
   .container {
   	overflow: hidden;
     text-align: center;
+	  width: 100%;
+	  height: 100%;
   }
   
   .containera {
   	overflow: hidden;
     text-align: center;
+	  width: 100%;
+	  height: 100%;
   }
 
   .light-text {
